--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
   "dependencies": {
     "@graphql-yoga/node": "3.5.1",
     "@pothos/core": "3.25.0",
-    "axios": "^1.2.1",
+    "axios": "1.2.1",
     "graphql": "16.6.0",
     "graphql-scalars": "1.20.1",
-    "graphql-yoga": "^3.1.1"
+    "graphql-yoga": "3.1.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.17",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.33.0",
-    "prettier": "^2.8.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
+    "@types/node": "18.11.17",
+    "@typescript-eslint/eslint-plugin": "5.49.0",
+    "@typescript-eslint/parser": "5.49.0",
+    "eslint": "8.33.0",
+    "prettier": "2.8.1",
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev dev/server.ts",
