--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -26,3 +26,21 @@ jobs:
 
       - name: Build project
         run: yarn run build
+
+  test-node-18:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v2
+      - name: Setup Nodejs
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.x'
+      - name: Setup yarn
+        run: npm install -g yarn
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Build project
+        run: yarn run build
